# RSLibrary

./: .gitignore  CMakeLists.txt  README.md
src/DynamicLibrary/: CMakeLists.txt  RSDll.cpp  RSDll.h  global.h  version.rc.in
src/StaticLibrary/: CMakeLists.txt  FileHelper.cpp  FileHelper.h
src/Tester/: CMakeLists.txt  main.cpp
